src/test/contracts/negative/deep_pattern_matching/pm_fail4.religo
type myt = Nil(unit) | Cons ((int, int))

let t = (x: (myt, myt)) =>
  switch(x) {
  | (Nil , ys)  => 1
  | (xs  , Nil) => 2
  }